java/src/generatedParser/superLanguageParser.java
package generatedParser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class superLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, LPAREN=35, RPAREN=36, LBRACE=37, RBRACE=38, 
		LBRACK=39, RBRACK=40, SEMI=41, COMMA=42, ASSIGN=43, GT=44, LT=45, BANG=46, 
		COLON=47, EQUAL=48, LE=49, GE=50, NOTEQUAL=51, AND=52, OR=53, INC=54, 
		DEC=55, ADD=56, SUB=57, MUL=58, DIV=59, BITAND=60, BITOR=61, CARET=62, 
		MOD=63, Identifier=64, StringLiteral=65, CharacterLiteral=66, BooleanLiteral=67, 
		IntegerLiteral=68, NullLiteral=69;
	public static final int
		RULE_literal = 0, RULE_primaryExpression = 1, RULE_type = 2, RULE_primitiveType = 3, 
		RULE_numericType = 4, RULE_integralType = 5, RULE_referenceType = 6, RULE_arrayType = 7, 
		RULE_dims = 8, RULE_procedureOrVariableName = 9, RULE_arrayInitializer = 10, 
		RULE_variableInitializerList = 11, RULE_variableInitializer = 12, RULE_expression = 13, 
		RULE_assignmentExpression = 14, RULE_assignment = 15, RULE_leftHandSide = 16, 
		RULE_assignmentOperator = 17, RULE_expressionStatement = 18, RULE_statementExpression = 19, 
		RULE_ifThenStatement = 20, RULE_statement = 21, RULE_statementNoShortIf = 22, 
		RULE_statementWithoutTrailingSubstatement = 23, RULE_block = 24, RULE_blockStatements = 25, 
		RULE_blockStatement = 26, RULE_localVariableDeclarationStatement = 27, 
		RULE_localVariableDeclaration = 28, RULE_unannType = 29, RULE_unannPrimitiveType = 30, 
		RULE_unannReferenceType = 31, RULE_unannTypeVariable = 32, RULE_unannArrayType = 33, 
		RULE_variableDeclaratorList = 34, RULE_variableDeclarator = 35, RULE_variableDeclaratorId = 36, 
		RULE_emptyStatement = 37, RULE_ifThenElseStatement = 38, RULE_ifThenElseStatementNoShortIf = 39, 
		RULE_switchStatement = 40, RULE_switchBlock = 41, RULE_switchBlockStatementGroup = 42, 
		RULE_switchLabels = 43, RULE_switchLabel = 44, RULE_enumConstantName = 45, 
		RULE_whileStatement = 46, RULE_whileStatementNoShortIf = 47, RULE_doStatement = 48, 
		RULE_forStatement = 49, RULE_forStatementNoShortIf = 50, RULE_basicForStatement = 51, 
		RULE_basicForStatementNoShortIf = 52, RULE_forInit = 53, RULE_forUpdate = 54, 
		RULE_statementExpressionList = 55, RULE_breakStatement = 56, RULE_continueStatement = 57, 
		RULE_returnStatement = 58, RULE_primary = 59, RULE_primaryNoNewArray = 60, 
		RULE_primaryNoNewArray_lfno_arrayAccess = 61, RULE_primaryNoNewArray_lf_primary = 62, 
		RULE_primaryNoNewArray_lf_primary_lf_arrayAccess_lf_primary = 63, RULE_primaryNoNewArray_lf_primary_lfno_arrayAccess_lf_primary = 64, 
		RULE_primaryNoNewArray_lfno_primary = 65, RULE_primaryNoNewArray_lfno_primary_lf_arrayAccess_lfno_primary = 66, 
		RULE_primaryNoNewArray_lfno_primary_lfno_arrayAccess_lfno_primary = 67, 
		RULE_fieldAccess_lf_primary = 68, RULE_fieldAccess_lfno_primary = 69, 
		RULE_arrayAccess = 70, RULE_primaryNoNewArray_lf_arrayAccess = 71, RULE_arrayAccess_lf_primary = 72, 
		RULE_arrayAccess_lfno_primary = 73, RULE_methodInvocation = 74, RULE_methodInvocation_lf_primary = 75, 
		RULE_methodInvocation_lfno_primary = 76, RULE_argumentList = 77, RULE_arrayCreationExpression = 78, 
		RULE_dimExprs = 79, RULE_dimExpr = 80, RULE_constantExpression = 81, RULE_conditionalExpression = 82, 
		RULE_conditionalOrExpression = 83, RULE_conditionalAndExpression = 84, 
		RULE_inclusiveOrExpression = 85, RULE_exclusiveOrExpression = 86, RULE_andExpression = 87, 
		RULE_equalityExpression = 88, RULE_relationalExpression = 89, RULE_shiftExpression = 90, 
		RULE_additiveExpression = 91, RULE_multiplicativeExpression = 92, RULE_unaryExpression = 93, 
		RULE_preIncrementExpression = 94, RULE_preDecrementExpression = 95, RULE_unaryExpressionNotPlusMinus = 96, 
		RULE_postfixExpression = 97, RULE_postIncrementExpression = 98, RULE_postIncrementExpression_lf_postfixExpression = 99, 
		RULE_postDecrementExpression = 100, RULE_postDecrementExpression_lf_postfixExpression = 101, 
		RULE_castExpression = 102;
	public static final String[] ruleNames = {
		"literal", "primaryExpression", "type", "primitiveType", "numericType", 
		"integralType", "referenceType", "arrayType", "dims", "procedureOrVariableName", 
		"arrayInitializer", "variableInitializerList", "variableInitializer", 
		"expression", "assignmentExpression", "assignment", "leftHandSide", "assignmentOperator", 
		"expressionStatement", "statementExpression", "ifThenStatement", "statement", 
		"statementNoShortIf", "statementWithoutTrailingSubstatement", "block", 
		"blockStatements", "blockStatement", "localVariableDeclarationStatement", 
		"localVariableDeclaration", "unannType", "unannPrimitiveType", "unannReferenceType", 
		"unannTypeVariable", "unannArrayType", "variableDeclaratorList", "variableDeclarator", 
		"variableDeclaratorId", "emptyStatement", "ifThenElseStatement", "ifThenElseStatementNoShortIf", 
		"switchStatement", "switchBlock", "switchBlockStatementGroup", "switchLabels", 
		"switchLabel", "enumConstantName", "whileStatement", "whileStatementNoShortIf", 
		"doStatement", "forStatement", "forStatementNoShortIf", "basicForStatement", 
		"basicForStatementNoShortIf", "forInit", "forUpdate", "statementExpressionList", 
		"breakStatement", "continueStatement", "returnStatement", "primary", "primaryNoNewArray", 
		"primaryNoNewArray_lfno_arrayAccess", "primaryNoNewArray_lf_primary", 
		"primaryNoNewArray_lf_primary_lf_arrayAccess_lf_primary", "primaryNoNewArray_lf_primary_lfno_arrayAccess_lf_primary", 
		"primaryNoNewArray_lfno_primary", "primaryNoNewArray_lfno_primary_lf_arrayAccess_lfno_primary", 
		"primaryNoNewArray_lfno_primary_lfno_arrayAccess_lfno_primary", "fieldAccess_lf_primary", 
		"fieldAccess_lfno_primary", "arrayAccess", "primaryNoNewArray_lf_arrayAccess", 
		"arrayAccess_lf_primary", "arrayAccess_lfno_primary", "methodInvocation", 
		"methodInvocation_lf_primary", "methodInvocation_lfno_primary", "argumentList", 
		"arrayCreationExpression", "dimExprs", "dimExpr", "constantExpression", 
		"conditionalExpression", "conditionalOrExpression", "conditionalAndExpression", 
		"inclusiveOrExpression", "exclusiveOrExpression", "andExpression", "equalityExpression", 
		"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "preIncrementExpression", "preDecrementExpression", 
		"unaryExpressionNotPlusMinus", "postfixExpression", "postIncrementExpression", 
		"postIncrementExpression_lf_postfixExpression", "postDecrementExpression", 
		"postDecrementExpression_lf_postfixExpression", "castExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'boolean'", "'byte'", "'short'", "'int'", "'long'", "'char'", "'*='", 
		"'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", 
		"'|='", "'if'", "'else'", "'switch'", "'case'", "'default'", "'while'", 
		"'do'", "'for'", "'break'", "'continue'", "'return'", "'.'", "'class'", 
		"'this'", "'super'", "'new'", "'?'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "';'", "','", "'='", "'>'", "'<'", "'!'", "':'", "'=='", "'<='", 
		"'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", 
		"'&'", "'|'", "'^'", "'%'", null, null, null, null, null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "ASSIGN", 
		"GT", "LT", "BANG", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", 
		"INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", 
		"MOD", "Identifier", "StringLiteral", "CharacterLiteral", "BooleanLiteral", 
		"IntegerLiteral", "NullLiteral"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "superLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public superLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode IntegerLiteral() { return getToken(superLanguageParser.IntegerLiteral, 0); }
		public TerminalNode BooleanLiteral() { return getToken(superLanguageParser.BooleanLiteral, 0); }
		public TerminalNode CharacterLiteral() { return getToken(superLanguageParser.CharacterLiteral, 0); }
		public TerminalNode StringLiteral() { return getToken(superLanguageParser.StringLiteral, 0); }
		public TerminalNode NullLiteral() { return getToken(superLanguageParser.NullLiteral, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			_la = _input.LA(1);
			if ( !(((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (StringLiteral - 65)) | (1L << (CharacterLiteral - 65)) | (1L << (BooleanLiteral - 65)) | (1L << (IntegerLiteral - 65)) | (1L << (NullLiteral - 65)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(superLanguageParser.Identifier, 0); }
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).enterPrimaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).exitPrimaryExpression(this);
		}
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_primaryExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public ReferenceTypeContext referenceType() {
			return getRuleContext(ReferenceTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			setState(212);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(210);
				primitiveType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(211);
				referenceType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveTypeContext extends ParserRuleContext {
		public NumericTypeContext numericType() {
			return getRuleContext(NumericTypeContext.class,0);
		}
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).enterPrimitiveType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).exitPrimitiveType(this);
		}
	}

	public final PrimitiveTypeContext primitiveType() throws RecognitionException {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primitiveType);
		try {
			setState(216);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(214);
				numericType();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(215);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericTypeContext extends ParserRuleContext {
		public IntegralTypeContext integralType() {
			return getRuleContext(IntegralTypeContext.class,0);
		}
		public NumericTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).enterNumericType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).exitNumericType(this);
		}
	}

	public final NumericTypeContext numericType() throws RecognitionException {
		NumericTypeContext _localctx = new NumericTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_numericType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218);
			integralType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegralTypeContext extends ParserRuleContext {
		public IntegralTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integralType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).enterIntegralType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof superLanguageListener ) ((superLanguageListener)listener).exitIntegralType(this);
		}
	}

	public final IntegralTypeContext integralType() throws RecognitionException {
		IntegralTypeContext _localctx = new IntegralTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_integralType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(220);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
